style: ensure z-index is set for global toggle button

--- a/frontend/src/app/global-toggle-btn/global-toggle-btn.component.scss
+++ b/frontend/src/app/global-toggle-btn/global-toggle-btn.component.scss
@@ -5,5 +5,6 @@
     position: fixed;
     bottom: 0;
     width: 100%;
+    z-index: 1;
     
 }
